<resources>
    <string name="app_name">ToDoListApp</string>
    <string name="main_activity_name">All Tasks</string>
    <string name="add_task_activity_name">Add a New Task</string>
    <!-- Strings for MainActivity -->
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>

    <!-- Strings for AddItem -->
    <!-- This etaskEntrytask has a unicode character for "..." = "&#8230;" -->
    <string name="edit_task_description">Task Description&#8230;</string>
    <string name="edit_progress_number">Enter progress number&#8230;</string>
    <string name="priority_string">Priority</string>

    <string name="Type_of_task">Category</string>
    <string name="task_to_be_done">Task Description</string>
    <string name="enter_priority">Add Progress</string>
    <string name="menu_add">ADD</string>
    <string name="save">Save</string>

    <string name="progress">In Progress</string>
    <string name="done">Done</string>
    <string name="late">Late</string>

    <string name="work">Work</string>
    <string name="home">Home</string>
    <string name="school">School</string>

    <string-array name="topic">
        <item>Work</item>
        <item>Home</item>
        <item>School</item>
        <item>Other</item>
    </string-array>

    <string name="add_button">Add</string>
    <string name="update_button">Update</string>



    <string name="action_settings">Settings</string>
    <string name="time_picker_example">Time Picker Example</string>
    <string name="time_pick">Pick the time and press save button</string>
    <string name="time_save">Save</string>
    <string name="time_selected"></string>
    <string name="time_current">The Time is:</string>


</resources>

