<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <!-- Task description -->

    <TextView
        android:id="@+id/tvNewTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/edit_task_description"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/itemDesc"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/imgDate"
        android:layout_toLeftOf="@+id/imgDate"
        android:baselineAligned="false"
        android:textSize="14sp"
        android:hint="Add description of the task"
        android:gravity="start"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        />


    <!-- Due date -->

    <TextView
        android:id="@+id/Duedate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="Due Date"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editDueDate"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/imgDate"
        android:layout_toLeftOf="@+id/imgDate"
        android:baselineAligned="false"
        android:gravity="start"
        android:textSize="14sp"
        android:hint="Enter due date"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>


    <!-- Time -->

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="Time"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editDueTime"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/imgDate"
        android:layout_toLeftOf="@+id/imgDate"
        android:baselineAligned="false"
        android:textSize="14sp"
        android:gravity="start"
        android:hint="Enter due date"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>


    <!-- RadioGroup for category -->

    <TextView
        android:id="@+id/categoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgTime"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:text="@string/Type_of_task"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold" />



    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPriority"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3">

        <RadioButton
            android:id="@+id/radioButtonA"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_weight="1"
            android:checked="true"
            android:padding="10dp"
            android:text="@string/home"
            android:background="@drawable/border"
            android:theme="@style/pinkRadioButton" />

        <RadioButton
            android:id="@+id/radioButtonB"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/school"
            android:background="@drawable/border"
            android:theme="@style/pinkRadioButton" />

        <RadioButton
            android:id="@+id/radioButtonC"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/work"
            android:background="@drawable/border"
            android:theme="@style/pinkRadioButton" />

    </RadioGroup>

    <!-- RadioGroup for progress' task -->
    <TextView
        android:id="@+id/tvPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgTime"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:text="@string/enter_priority"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold" />


    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPriority"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:baselineAligned="false"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:weightSum="3">

        <RadioButton
            android:id="@+id/radioButtonD"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_weight="1"
            android:checked="true"
            android:padding="10dp"
            android:text="@string/progress"
            android:background="@drawable/border"
            android:theme="@style/YellowRadioButton" />

        <RadioButton
            android:id="@+id/radioButtonE"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/done"
            android:background="@drawable/border"
            android:theme="@style/GreenRadioButton" />

        <RadioButton
            android:id="@+id/radioButtonF"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/late"
            android:background="@drawable/border"
            android:theme="@style/RedRadioButton" />

    </RadioGroup>


    <!-- What percentage of the task is being done -->

    <TextView
        android:id="@+id/percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="Progress"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edit_progress_number"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/imgDate"
        android:layout_toLeftOf="@+id/imgDate"
        android:gravity="start"
        android:textSize="14sp"
        android:hint="@string/edit_progress_number"
        android:paddingBottom="@dimen/activity_horizontal_margin" />


 </LinearLayout>